<resources>
    <string name="app_name">Cuidarnos</string>
    <!-- Activity Main -->
    <string name="page_one_activity_textViewSaludo">Para empezar necesitamos que nos proporcione sus datos personales</string>
    <string name="page_one_activity_textViewConfidencial">La información que registre será utilizada exclusivamente por el Personal de Salud y tratada de manera totalmente confidencial.</string>
    <string name="page_one_activity_names">Nombres</string>
    <string name="page_one_activity_last_names">Apellidos</string>
    <string name="page_one_activity_phone">Número de celular</string>
    <string name="page_one_activity_estado_civil">Estado civil</string>
    <string name="page_one_activity_gender">Género</string>
    <string name="page_one_activity_birthday">Fecha de nacimiento</string>
    <string name="page_two_activity_textViewDatosVivienda">Por favor registre los datos de la ubicación de su vivienda</string>
    <string name="page_two_activity_municipio">Municipio</string>
    <string name="page_two_activity_city">Ciudad</string>
    <string name="page_two_activity_barrio">Barrio</string>
    <string name="page_two_activity_address">Dirección (calle y número de puerta)</string>
    <string name="page_antecedentes_activity_btn_finalizar">Finalizar</string>
    <string name="page_two_activity_terminos">Acepto que el Consejo de Salud Rural Andino realice un seguimiento de mi estado de salud y conserve confidencialmente mis datos personales mientras estos sean necesarios</string>
    <string name="activity_acceso_aplicacion_cabecera">PAGINA PRINCIPAL</string>
    <string name="page_one_activity_btn_atras">Ir atras</string>
    <string name="page_two_activity_enCasa">En este momento, ¿Usted se encuentra en su vivienda?</string>
    <string name="actecedentes_activity_saludo">Por favor responda las siguientes preguntas:</string>
    <string name="antecedentes_activity_ant1">1. ¿Diabetes o azucar en sangre?</string>
    <string name="antecedentes_activity_ant2">2. ¿Obesidad o sobrepeso?</string>
    <string name="antecedentes_activity_ant3">3. ¿Enfermedad de los riñones o Diálisis?</string>
    <string name="antecedentes_activity_ant4">4. ¿Presión alta?</string>
    <string name="antecedentes_activity_ant5">5. ¿Enfermedad del corazón?</string>
    <string name="antecedentes_activity_ant6">6. ¿Enfermedad de los pulmones?</string>
    <string name="antecedentes_activity_ant7">7. ¿Cáncer?</string>
    <string name="antecedentes_activity_ant8">8. ¿VIH/SIDA?</string>
    <string name="actecedentes_activity_instruccion">Usted sabe si tiene, o el médico le ha dicho que tiene…</string>
    <string name="antecedentes_activity_embarazo">9. ¿Actualmente usted esta embarazada?</string>
    <string name="autodiagnostico_p1_intro">Aquí da inicio el procedimiento de autoevaluación, por favor responda honestamente todas las preguntas</string>
    <string name="page_two_activity_btn_continuar">Continuar</string>
    <string name="page_one_activity_btn_continuar">Continuar</string>
    <string name="autodiagnostico_titulo">Autoevaluación</string>
    <string name="page_1_AD_activity_btContinuar">Continuar</string>
    <string name="page_1_AD_activity_textP1">¿Ud. tiene COVID-19? (confirmado o no por laboratorio)</string>
    <string name="page_1_AD_activity_textP2">¿Estuvo en contacto con una persona confirmada o sospechosa de tener COVID-19, durante la última semana?</string>
    <string name="ADM_activity_text_tos_seca">1. Tos seca</string>
    <string name="autodiagnostico_molestias_intro">¿Tiene alguna de las siguientes molestias?</string>
    <string name="btADSi">SI</string>
    <string name="btADNo">NO</string>
    <string name="ADM_activity_text_fiebre">2. Fiebre</string>
    <string name="ADM_activity_text_malestar">3. Malestar de todo el cuerpo</string>
    <string name="ADM_activity_text_dolor_cabeza">4. Dolor fuerte de cabeza</string>
    <string name="ADM_activity_text_problemas_respiracion">5. Problemas de respiración o fatiga</string>
    <string name="ADM_activity_text_dolor_garganta">7. Dolor de garganta</string>
    <string name="ADM_activity_text_dolor_muscular">6. Dolores musculares</string>
    <string name="ADM_activity_text_perdida_olfato">8. No puede sentir los olores</string>
    <string name="ADM_activity_text_perdida_gusto">9. No puede sentir los sabores</string>
    <string name="ADP_activity_text_dificultad_respiratoria">¿Tiene dificultad para respirar?</string>
    <string name="ADP_activity_text_tiempo_dificultad_respiratoria">Desde que fecha aproximadamente, ¿tiene dificultad para respirar?</string>
    <string name="ADP_activity_text_severidad_dificultad_respiratoria">¿Qué tan intensa es la dificultad para respirar?</string>
    <string name="btADP1_3MuySevera">MUY INTENSA</string>
    <string name="btADP1_3Severa">INTENSA</string>
    <string name="btADP1_3Moderada">MODERADA</string>
    <string name="btADP1_3Leve">LEVE</string>
    <string name="autodiagnostico_peligros_activity_btn_seleccionar_fecha">Seleccionar</string>
    <string name="ADP_activity_text_cansancio">¿Siente que se cansa o fatiga facilmente, cuándo realiza alguna actividad?</string>
    <string name="ADP_activity_text_malestar">¿Siente mucho malestar general?</string>
    <string name="ADP_activity_text_fiebre">¿Tiene o ha tenido recientemente fiebre?</string>
    <string name="ADP_activity_text_intensidad_fiebre">¿Qué tan intensa es o fue la fiebre?</string>
    <string name="ADP_activity_text_dolor_pecho">¿Siente dolor de pecho?</string>
    <string name="page_1_AD_activity_btFinalizar">Finalizar</string>
    <string name="btADP4_2MuyAlta">MUY ALTA</string>
    <string name="btADP4_2Alta">ALTA</string>
    <string name="autodiagnostico_final">Resultado de la autoevaluación</string>
    <string name="mainmenu_titulo_autoevaluacion">REALICE LA AUTOEVALUACIÓN</string>
    <string name="mainmenu_subtitulo_autoevaluacion">Esta opción le permite realizar una nueva autoevaluación y enviar el resultado automáticamente al Personal de Salud.</string>
    <string name="mainmenu_titulo_modificarDatos">MODIFICAR SUS DATOS PERSONALES</string>
    <string name="mainmenu_subtitulo_modificarDatos">Ingrese aquí si quiere verificar o modificar sus datos personales, ya sea porque estén mal registrados o porque hayan cambiado.</string>
    <string name="mainmenu_textoBoton_autoevaluacion">INICIAR AUTOEVALUACIÓN</string>
    <string name="mainmenu_textoBoton_editarDatos">EDITAR SUS DATOS</string>
    <string name="mainmenu_titulo_infoCovid">OBTENGA INFORMACIÓN IMPORTANTE</string>
    <string name="mainmenu_subtitulo_infoCovid">Obtenga información de fuentes oficiales sobre el COVID-19, las medidas de prevención y las acciones necesarias que se deben efectuar para superarlo.</string>
    <string name="mainmenu_textoBoton_infoCovid">INFORMACIÓN COVID-19</string>
    <string name="autoevaluacion_envio_datos_bajo">"Los resultados de su evaluación han sido informados a Personal de Salud, quienes se pondran en contacto con Ud. en caso de ser necesario."</string>
    <string name="autoevaluacion_envio_datos_alto">"Los resultados de su evaluación han sido informados a Personal de Salud, quienes se pondran en contacto con Ud."</string>
    <string name="autoevaluacion_lavese_las_manos">"Lávese las manos con agua y jabón, de manera frecuente y por lo menos por 20 segundos."</string>
    <string name="autoevaluacion_use_barbijo_bajo">"Haga uso de un barbijo que le cubra la nariz y la boca, siempre que se encuentre fuera de su vivienda."</string>
    <string name="autoevaluacion_use_barbijo_alto">"Haga uso de un barbijo que le cubra la nariz y la boca en todo momento."</string>
    <string name="autoevaluacion_distanciamiento">"Mantenga la distancia con otras personas, separándose de ellas por al menos 2 metros."</string>
    <string name="autoevaluacion_nuevo_sintoma">"En caso de que presente cualquier síntoma, deberá realizar una nueva autoevaluación inmediatamente, para evitar una situación de riesgo."</string>
    <string name="autoevaluacion_aislece">"Manténgase aislado en una habitación separada hasta que se pueda confirmar su diagnóstico."</string>
    <string name="autoevaluacion_aislece_con_covid">"Quédese en su casa y evite salir de la habitación en la que se encuentre aislado."</string>
    <string name="autoevaluacion_aislece_con_covid_alto">"Quédese en su casa y evite salir de la habitación en la que se encuentre, evite asistir físicamente a un Servicio de Salud"</string>
    <string name="autoevaluacion_no_use_mismo_bano">"No utilice el mismo baño que utilizan las demás personas con las que convive, si lo comparte debe desinfectarlo antes y después de utilizarlo."</string>
    <string name="autoevaluacion_familia_aislada">"Ud. y su familia deben permanecer en su vivienda, pronto será sometido a pruebas que permitan confirmar el diagnostico."</string>
    <string name="autoevaluacion_aislece_low">"Manténgase aislado el mayor tiempo posible, en una habitación separada hasta que se pueda confirmar su diagnóstico."</string>
    <string name="autoevaluacion_no_use_mismo_bano_low">"Procure no utilizar el mismo baño que utilizan las demás personas con las que convive, si lo comparte debe desinfectarlo antes y después de utilizarlo."</string>
    <string name="autoevaluacion_aislamiento_familia">"Ud. y los integrantes de su familia deben salir lo menos posible de su vivienda, pronto se podra confirmar su diagnostico."</string>
    <string name="autoevaluacion_utencilios_covid">"Los cubiertos, vasos, platos y otros utensilios que utilice, deben ser lavados con lavavajillas o detergente."</string>
    <string name="autoevaluacion_llame_personal_salud">"Comuníquese por cualquier medio con el celular 78177431 para ser evaluado por un médico, de manera remota e inmediata."</string>
    <string name="select_date">Seleccione la fecha</string>
    <string name="solicita_pin_activity_texto">Por favor ingrese el número de identificación personal asignado al promotor de esta zona</string>
    <string name="solicita_pin_activity_valor_pin">Ingrese PIN</string>

</resources>