<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.csrabolivia.cuidarnos.AutodiagnosticoPeligrosP1Activity">
    <ImageView
        android:id="@+id/logocsra"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBackground"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/l_cuidarnosc" />

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/your_state_progress_bar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logocsra"
        app:layout_constraintTop_toTopOf="parent"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true"
        app:spb_currentStateDescriptionColor="#DB0082"
        app:spb_currentStateNumber="two"
        app:spb_maxStateNumber="three"
        app:spb_stateBackgroundColor="#BDBDBD"
        app:spb_stateDescriptionColor="#808080"
        app:spb_stateForegroundColor="#DB0082"
        app:spb_stateNumberBackgroundColor="#808080"
        app:spb_stateNumberForegroundColor="#eeeeee"
        app:spb_stateSize="30dp" />

    <TextView
        android:id="@+id/textViewSaludo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/autodiagnostico_titulo"
        android:textAlignment="center"
        android:textColor="@color/my_color_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_state_progress_bar_id" />

    <ScrollView
        android:id="@+id/autodiagnosticoPeligrosScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btADPContinuar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaludo">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!-- Dificultad para respirar-->
            <LinearLayout
                android:id="@+id/layoutADP1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvADP1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/ADP_activity_text_dificultad_respiratoria"
                    android:textAlignment="textStart"

                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/ADPp1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btADPP1_1Si"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADSi"
                        android:textSize="20sp"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24" />

                    <Button
                        android:id="@+id/btADPP1_1No"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADNo"
                        android:textSize="20sp"
                        app:icon="@drawable/ic_baseline_remove_circle_outline_24" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
            <!--Desde hace cuantos días tiene dificultad para respirar-->
            <LinearLayout
                android:id="@+id/layoutADP1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvADP1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/ADP_activity_text_tiempo_dificultad_respiratoria"
                    android:textAlignment="textStart"

                    android:textSize="18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/layoutADP1_2_boton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btADPSelFecha"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/my_color_dark"
                        android:text="@string/autodiagnostico_peligros_activity_btn_seleccionar_fecha"/>
                    <TextView
                        android:id="@+id/tvFechaDifResp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/border"
                        />
                </LinearLayout>

            </LinearLayout>
            <!--Que tan severa es su dificultad para respirar-->
            <LinearLayout
                android:id="@+id/layoutADP1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvADP1_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ADP_activity_text_severidad_dificultad_respiratoria"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/ADPp1_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btADPP1_3MuySevera"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADP1_3MuySevera"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24" />

                    <Button
                        android:id="@+id/btADPP1_3Severa"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADP1_3Severa"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24" />

                    <Button
                        android:id="@+id/btADPP1_3Moderada"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADP1_3Moderada"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24" />

                    <Button
                        android:id="@+id/btADPP1_3Leve"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btADP1_3Leve"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btADPContinuar3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/my_color_dark"
        android:text="@string/page_1_AD_activity_btContinuar"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btADPAtras3"
        app:layout_constraintTop_toBottomOf="@+id/autodiagnosticoPeligrosScroll" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btADPAtras3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/my_color_dark"
        android:text="@string/page_one_activity_btn_atras"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btADPContinuar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autodiagnosticoPeligrosScroll" />


</androidx.constraintlayout.widget.ConstraintLayout>